# omcc-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/agents/: mod.rs
src/autopilot/: mod.rs
src/config/: mod.rs
src/decompose/: mod.rs
src/hook/: mod.rs
src/hud/: mod.rs
src/keyword/: mod.rs
src/router/: mod.rs
src/skills/: mod.rs
src/state/: mod.rs
