[package]
name = "omcc-rs"
version = "1.0.0"
edition = "2021"
description = "High-performance Claude Code orchestration toolkit — Rust reimplementation of oh-my-claudecode"
license = "MIT"
authors = ["JSLEEKR <93jslee@gmail.com>"]

[[bin]]
name = "omcc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
